--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,11 +1,12 @@
-.wrapper{
-    height: 60px;
-
+.wrapper {
+    width: 100%;
+    height: var(--default-layput-header-height);
     box-shadow: 0px 1px rgb(0 0 0 / 12%);
+    display: flex;
+    justify-content: center;
 }
 
-.inner{
+.inner {
     height: 100%;
-    width: 1150px;
-    background-color: #ccc;
+    width: var(--default-layput-width);
 }
