Xây dựng UI phần Header #5

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -9,6 +9,7 @@
     //Default layout
     --default-layput-header-height: 60px;
     --default-layput-width: 1150px;
+    --default-layput-horizontal-spacer: 24px;
 }
 
 * {
