--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -6,6 +6,7 @@
 
 .container {
     width: var(--default-layput-width);
+    padding: 0 var(--default-layput-horizontal-spacer);
     display: flex;
 }
 
