--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -43,6 +43,7 @@
     padding: 5px 12px;
     font-style: 1.4rem;
     font-weight: 600;
+
     color: rgba(22, 24, 35, 0.5);
 }
 .clear,
@@ -53,7 +54,17 @@
     transform: translateY(-50%);
     color: rgba(22, 24, 35, 0.34);
 }
-
+.loading {
+    animation: spinner 1s linear infinite;
+}
+@keyframes spinner {
+    from {
+        transform: translateY(-50%) rotate(0);
+    }
+    to {
+        transform: translateY(-50%) rotate(360deg);
+    }
+}
 .search-btn {
     width: var(--search-button-width);
     height: 100%;
