--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -10,6 +10,9 @@
 .menu-propper {
     padding-bottom: 8px;
 }
+.menu-body {
+    overflow-y: auto;
+}
 
 .menu-item {
     width: 100%;
@@ -31,6 +34,7 @@
 //header
 .header {
     position: relative;
+    flex-shrink: 0;
     height: 50px;
     margin-top: -8px;
 }
